[201225] Java. GC. Updating info